# art-thingies

./: .gitignore  README.md  circles-rays.ipynb  main.py  package-lock.json  package.json  pyproject.toml  w02.ipynb
gen_art_dev/: coiled_tendrils.html  coiled_tendrils.py  ferromagnetic-playaround-test.html  geological-strata.html  geological_strata.py  glass_droplets.html  glass_droplets.py  turbulent_lines.html  turbulent_lines.py  turbulent_lines_v1_backup.html  turbulent_lines_v2_eddies.py  water_droplets.html  water_droplets.py
gen_art_dev/scripts/: __init__.py  batch_gen.py  examples.py  generators.py  preview.py  svg_utils.py
gen_art_dev/turbulent-lines-experiments/: turbulent_lines_v1_backup.py  turbulent_lines_v2_eddies.html
noise_bezier/: sketch_noise_bezier.py
notebooks/: circles-rays.ipynb  flowing.ipynb  playground.ipynb  playground_working_baseline.ipynb  spirals.ipynb
plotter_art/: sketch_plotter_art.py
random_lines/: sketch_random_lines.py
raute/: sketch_raute.py
snowflakes/: Snowflake.ipynb  sketch_snowflakes.py  snowflake02.ipynb  snowflake_test.ipynb
spiky_snail/: sketch_spiky_snail.py
