[tool.poetry]
name = "art-thingies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
vsketch = "^1.0.0"
ipython = "^8.17.2"
pip = "^23.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
